fixed spacing on pre elements

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -112,6 +112,10 @@ a
     padding: 6px; 
     border: none; 
 
+.Markdown
+  pre
+    margin-bottom: 2.5rem
+
 @media screen and (min-width: 640px)
   .no-mob
     display: block !important; 
